--- a/static/styles/dashboard.scss
+++ b/static/styles/dashboard.scss
@@ -143,6 +143,13 @@ body {
               background: rgba($color: $defaultColor, $alpha: 0.08);
             }
 
+            .submenu {
+              color: #d1e5fa;
+              font-size: 12px;
+              padding: 15px 18px 4px 18px;
+              font-weight: 300;
+            }
+
             a {
               display: flex;
               align-items: center;
@@ -568,6 +575,37 @@ body {
           }
         }
 
+        #extra-menu {
+          ul {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 20px;
+            justify-content: flex-end;
+            li {
+              list-style-type: none;
+              display: block;
+              a,
+              button {
+                padding: 10px 17px;
+                border-radius: 6px;
+                background-color: #d5d7d7;
+                color: $aColor;
+                display: block;
+                border: none;
+                outline: none;
+                font-size: 16px;
+              }
+
+              button {
+                background-color: #981a01;
+                color: #fff;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+
         #list {
           ul {
             margin: 0;
@@ -863,8 +901,9 @@ body {
             }
           }
 
-          a {
+          button {
             padding: 12px 15px;
+            outline: none;
             border-radius: 8px;
             font-weight: 300;
             display: flex;
@@ -872,9 +911,9 @@ body {
             align-items: center;
             width: fit-content;
             margin-top: 24px;
-
+            border: none;
             transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-
+            cursor: pointer;
             background: #b31e00;
             &:hover {
               background: #981a01;
@@ -1052,6 +1091,7 @@ body {
                               width: 100%;
                             }
 
+                            color: #fbfdff;
                             @include semiPhone() {
                               width: 18px;
                               height: 18px;
@@ -1416,6 +1456,12 @@ body {
                       display: block;
                     }
                   }
+
+                  .checked {
+                    p {
+                      text-decoration: line-through;
+                    }
+                  }
                 }
               }
 
@@ -1674,6 +1720,29 @@ body {
                 color: $aColor;
               }
 
+              .action_list {
+                display: flex;
+                gap: 10px;
+                flex-wrap: wrap;
+
+                a {
+                  font-size: 14px;
+                  background: $primaryColor;
+                  color: white;
+                  padding: 8px 16px;
+                  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+                  border-radius: 4px;
+
+                  &:hover {
+                    background-blend-mode: hard-light;
+                  }
+
+                  &:last-child() {
+                    background-color: #4caf50;
+                  }
+                }
+              }
+
               strong,
               label,
               a {
@@ -1696,7 +1765,7 @@ body {
                 align-items: center;
 
                 svg {
-                  width: 24px;
+                  width: 20px;
                 }
               }
             }
@@ -1967,6 +2036,44 @@ body {
         }
       }
 
+      textarea,
+      select {
+        // border: 1px solid #ccc;
+        outline: none;
+        border: none;
+        width: calc(100% - 28px);
+        // width: 100%;
+        font-size: 15px;
+        padding: 12px 14px;
+        font-weight: 300;
+        border-radius: 6px;
+        transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        font-weight: 300;
+        box-shadow: 0 0 1px 1px rgb(219, 219, 219);
+
+        @include phone() {
+          padding: 10px 12px;
+          font-size: 13px;
+          border-radius: 4px;
+          width: calc(100% - 24px);
+        }
+
+        @include smallPhone() {
+          padding: 8px 10px;
+          font-size: 11px;
+          border-radius: 3px;
+          // width: calc(100% - 18px);
+        }
+
+        &:focus {
+          box-shadow: 0 0 4px 1px rgba($color: $primaryColor, $alpha: 0.4);
+        }
+      }
+
+      select {
+        width: 100%;
+      }
+
       button {
         width: fit-content;
         padding: 12px 24px;
@@ -2078,8 +2185,8 @@ body {
             // border: 1px solid #ccc;
             outline: none;
             border: none;
-            // width: calc(100% - 28px);
-            width: 100%;
+            width: calc(100% - 28px);
+            // width: 100%;
             font-size: 15px;
             padding: 12px 14px;
             font-weight: 300;
@@ -2092,7 +2199,7 @@ body {
               padding: 10px 12px;
               font-size: 13px;
               border-radius: 4px;
-              // width: calc(100% - 24px);
+              width: calc(100% - 24px);
             }
 
             @include smallPhone() {
